# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  13 Oct 2004; Aron Griffis <agriffis@gentoo.org>:

    Cosmetic fixes for starting loopback interface

* rc-scripts 1.6.2 (13 Oct 2004)

  13 Oct 2004; Aron Griffis <agriffis@gentoo.org>:

    Install net.modules.d to /lib/rcscripts instead of /etc so we
    don't have to deal with CONFIG_PROTECT

    Fix diff code in modules_load so it can identify which functions
    have been modified

    Fix fallback mechanism in iface_start so that it works correctly
    and doesn't report a bogus error message when trying the fallback

    Get rid of need_begin trickery in iface_stop

    Simplify eend processing in dhcp modules

    Implement eindent, eoutdent, esetdent in functions.sh and adjust
    net-scripts to use them.

    Re-write einfo, ewarn, eerror, ebegin, eend, ewend to use
    RC_INDENTATION and to work better on serial terminals

    Remove conf.d/net.ppp0 since that is provided by net-dialup/ppp

  12 Oct 2004; Aron Griffis <agriffis@gentoo.org>:

    Fix ipaddr_fallback in net-scripts/conf.d/net.example

  09 Oct 2004; Aron Griffis <agriffis@gentoo.org>:

    Remove init.d/net.eth0 net.lo and net.ppp0.  The first two are
    provided now by net-scripts and net.ppp0 is shipped in
    net-dialup/ppp

    Create NET_FS_LIST and is_net_fs in functions.sh and use them in
    checkroot, localmount, netmount, net.example, and net.lo

  09 Oct 2004; Mike Frysinger <vapier@gentoo.org>:

    If the hostname has already been set via the kernel/dhcp, don't 
    force it to 'localhost'.  Used in netboot/terminal setups #38172.

    Add domainname to default boot runlevel list #47041.

  08 Oct 2004; Mike Frysinger <vapier@gentoo.org>:

    Make sure that when we try to mount /sys, we do so with -n (tigger).

    Add some examples for nfs to sysctl.conf #66575.
